<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:id="@+id/settings"
        android:text="@string/settings_header"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:textSize="40sp"
        android:layout_marginTop="80dp">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="180dp"
        android:layout_marginHorizontal="20dp"
        android:background="#e67825">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/general_settings_hdr"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginTop="240dp"
        android:layout_marginStart="20dp"
        android:text="@string/language"
        android:textStyle="normal"
        android:textSize="15sp">
    </TextView>

    <Switch
        android:id="@+id/recommend_switch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/change_recommend"
        android:textSize="15sp"
        android:textStyle="normal"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize">
    </Switch>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="320dp"
        android:layout_marginHorizontal="20dp"
        android:background="#e67825">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:text="@string/visualization_header"

        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck">
    </TextView>

    <CheckBox
        android:id="@+id/line_checkBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="365dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layoutDirection="rtl"
        android:text="@string/show_line_numbers"
        android:textStyle="normal"
        tools:ignore="VisualLintButtonSize" />

    <Switch
        android:id="@+id/themeSwitch"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="405dp"
        android:text="@string/change_theme"
        android:textStyle="normal"
        android:checked="false"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize">
    </Switch>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="460dp"
        android:layout_marginHorizontal="20dp"
        android:background="#e67825">
    </View>

</FrameLayout>