<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:id="@+id/about_header"
                android:text="@string/about_us_header"
                android:textStyle="normal"
                android:textSize="40sp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:background="?attr/colorPrimary">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:text="@string/version_info_header"
                android:textStyle="bold"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/version_info_txt"
                android:textStyle="normal"
                android:textSize="15sp">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:background="?attr/colorPrimary">
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/developer_header"
                android:textStyle="bold"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/developers_txt"
                android:textStyle="normal"
                android:textSize="15sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/year_copyright"
                android:textStyle="normal"
                android:textSize="15sp">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:background="?attr/colorPrimary">
            </View>

            <Button
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@color/teal_200"
                android:text="@string/open_source_licences"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="15sp"></Button>

            <Button
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:background="#808080"
                android:textColor="#000000"
                android:text="@string/remove_ads"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textAllCaps="false">
            </Button>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/transparent"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>