<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:foregroundGravity="center"
    tools:context=".HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@mipmap/app_home_logo_foreground"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/home_greeting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="60dp"
                android:gravity="center_horizontal"
                android:text="@string/home_greeting"
                android:textAlignment="center"
                android:textColor="#e67825"
                android:textSize="26sp"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/start_command"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/home_direction"
                android:textAlignment="center"
                android:textSize="22sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/sub_info_italic"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/home_direction_sub"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/low_header_home"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"
                android:text="@string/home_info"
                android:textAlignment="center"
                android:textColor="#e67825"
                android:textSize="17sp"
                tools:ignore="TextSizeCheck,TextContrastCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/transparent"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>